--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "license": "CC-BY-NC-ND-4.0",
   "author": {
-    "name" : "Cagil Seker",
-    "email" : "cagils@gmail.com",
-    "url" : "https://cagils.dev"
+    "name": "Cagil Seker",
+    "email": "cagils@gmail.com",
+    "url": "https://cagils.dev"
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --check ."
   },
   "dependencies": {
     "next": "12.1.5",
@@ -37,6 +38,8 @@
   },
   "devDependencies": {
     "eslint": "8.13.0",
-    "eslint-config-next": "12.1.5"
+    "eslint-config-next": "12.1.5",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "2.6.2"
   }
 }
