--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,11 @@ on:
   push:
     branches: [main]
     paths:
-      - 'src/**'
+      - '/src/**'
   pull_request:
     branches: [main]
     paths:
-      - 'src/**'
+      - '/src/**'
 
 jobs:
   build:
