--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.25",
+    "@types/react": "^18.0.5",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
-    "prettier": "2.6.2"
+    "prettier": "2.6.2",
+    "typescript": "^4.6.3"
   }
 }
