--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,8 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "eslint:recommended",
-    "prettier",
-    "plugin:react/jsx-runtime"
-  ],
+  "extends": ["next", "next/core-web-vitals", "prettier"],
   "rules": {
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
-    "no-unused-vars": "off"
+    "no-unused-vars": [1, { "args": "after-used", "argsIgnorePattern": "^_" }]
   }
 }
