--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,7 +9,8 @@
     "dbankier.vscode-quick-select",
     "willstakayama.vscode-nextjs-snippets",
     "nucllear.vscode-extension-auto-import",
-    "DryWolf.dark-plus-plus-theme"
+    "drywolf.dark-plus-plus-theme",
+    "NuclleaR.vscode-extension-auto-import"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
