--- a/package.json
+++ b/package.json
@@ -65,10 +65,12 @@
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.22",
     "@storybook/addon-links": "^6.4.22",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-webpack5": "^6.4.22",
     "@storybook/manager-webpack5": "^6.4.22",
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.11",
+    "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
     "eslint": "8.13.0",
@@ -76,7 +78,10 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-storybook": "^0.5.11",
     "husky": "^7.0.4",
-    "prettier": "2.6.2"
+    "postcss": "^8.4.12",
+    "prettier": "2.6.2",
+    "storybook-css-modules-preset": "^1.1.1",
+    "tailwindcss": "^3.0.24"
   },
   "resolutions": {
     "webpack": "^5"
