--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "Showcase",
     "Example"
   ],
+  "browserslist": [
+    ">0.3%",
+    "not ie 11",
+    "not dead",
+    "not op_mini all"
+  ],
   "engines": {
     "node": ">=14.19.0",
     "npm": ">=6.14.16",
@@ -55,12 +61,14 @@
     "dayjs": "^1.11.1",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "tabler-icons-react": "^1.46.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@storybook/addon-a11y": "^6.4.22",
     "@storybook/addon-actions": "^6.4.22",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.22",
@@ -73,6 +81,7 @@
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
+    "dd": "^0.19.7",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
@@ -80,8 +89,12 @@
     "husky": "^7.0.4",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
+    "sass": "^1.50.1",
     "storybook-css-modules-preset": "^1.1.1",
-    "tailwindcss": "^3.0.24"
+    "storybook-dark-mode": "^1.0.9",
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.0"
   },
   "resolutions": {
     "webpack": "^5"
