chore: added conventional commits extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,6 @@
   "scss.lint.emptyRules": "ignore",
   "css.validate": false,
   "less.validate": false,
-  "scss.validate": false
+  "scss.validate": false,
+  "conventionalCommits.scopes": ["Docs"]
 }
