--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -12,7 +12,8 @@
     "drywolf.dark-plus-plus-theme",
     "vunguyentuan.vscode-postcss",
     "clinyong.vscode-css-modules",
-    "stylelint.vscode-stylelint"
+    "stylelint.vscode-stylelint",
+    "vivaxy.vscode-conventional-commits"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
