--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,11 +8,11 @@
     "alduncanson.react-hooks-snippets",
     "dbankier.vscode-quick-select",
     "willstakayama.vscode-nextjs-snippets",
-    "nucllear.vscode-extension-auto-import",
     "drywolf.dark-plus-plus-theme",
     "vunguyentuan.vscode-postcss",
     "clinyong.vscode-css-modules",
-    "stylelint.vscode-stylelint"
+    "stylelint.vscode-stylelint",
+    "vivaxy.vscode-conventional-commits"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
