--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,10 @@
 {
-  "extends": [
-    "plugin:storybook/recommended",
-    "next",
-    "next/core-web-vitals",
-    "prettier"
-  ],
+  "extends": ["plugin:storybook/recommended", "next", "next/core-web-vitals", "prettier"],
   "rules": {
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
-    "no-unused-vars": [1, { "args": "after-used", "argsIgnorePattern": "^_" }]
+    "no-unused-vars": [1, { "args": "after-used", "argsIgnorePattern": "^_" }],
+    "max-len": ["warn", { "code": 140, "ignoreComments": true }]
   },
   "overrides": [
     {
