--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@mantine/prism": "^4.1.4",
     "@mantine/rte": "^4.1.4",
     "@mantine/spotlight": "^4.1.4",
+    "cookies-next": "^2.0.4",
     "dayjs": "^1.11.1",
     "next": "12.1.5",
     "react": "18.0.0",
