--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@emotion-icons/feather": "^3.14.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@mantine/core": "^4.2.1",
     "@mantine/dates": "^4.2.1",
     "@mantine/dropzone": "^4.2.1",
@@ -62,8 +65,7 @@
     "dayjs": "^1.11.1",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "tabler-icons-react": "^1.46.0"
+    "react-dom": "18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
