--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -12,7 +12,10 @@
     "vunguyentuan.vscode-postcss",
     "clinyong.vscode-css-modules",
     "stylelint.vscode-stylelint",
-    "vivaxy.vscode-conventional-commits"
+    "vivaxy.vscode-conventional-commits",
+    "bradgashler.htmltagwrap",
+    "yatki.vscode-surround",
+    "naumovs.color-highlight"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
