--- a/package.json
+++ b/package.json
@@ -43,29 +43,25 @@
     "lint": "next lint",
     "prettier": "prettier --check .",
     "format": "prettier --write .",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "start-storybook -p 6006 -s ./public",
+    "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
-    "@mantine/core": "^4.1.4",
-    "@mantine/dates": "^4.1.4",
-    "@mantine/dropzone": "^4.1.4",
-    "@mantine/form": "^4.1.4",
-    "@mantine/hooks": "^4.1.4",
-    "@mantine/modals": "^4.1.4",
-    "@mantine/next": "^4.1.4",
-    "@mantine/notifications": "^4.1.4",
-    "@mantine/prism": "^4.1.4",
-    "@mantine/rte": "^4.1.4",
-    "@mantine/spotlight": "^4.1.4",
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion-icons/feather": "^3.14.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "cookies-next": "^2.0.4",
     "dayjs": "^1.11.1",
+    "framer-motion": "^6.3.3",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "tabler-icons-react": "^1.46.0"
+    "react-dom": "18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
+    "@chakra-ui/storybook-addon": "^1.0.3",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@storybook/addon-a11y": "^6.4.22",
