--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,10 @@
 {
+  //"parser": "@typescript-eslint/parser",
+  //"plugins": ["@typescript-eslint"],
   "extends": [
     "eslint:recommended",
+    //"plugin:@typescript-eslint/eslint-recommended",
+    //"plugin:@typescript-eslint/recommended",
     "plugin:storybook/recommended",
     "next",
     "next/core-web-vitals",
