--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -15,8 +15,7 @@
     "vivaxy.vscode-conventional-commits",
     "bradgashler.htmltagwrap",
     "yatki.vscode-surround",
-    "naumovs.color-highlight",
-    "monokai.theme-monokai-pro-vscode"
+    "naumovs.color-highlight"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
