--- a/package.json
+++ b/package.json
@@ -43,36 +43,38 @@
     "lint": "next lint",
     "prettier": "prettier --check .",
     "format": "prettier --write .",
-    "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook -s public"
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.7",
-    "@chakra-ui/react": "^1.8.8",
-    "@emotion-icons/feather": "^3.14.0",
+    "@chakra-ui/icons": "2.0.0-next.1",
+    "@chakra-ui/react": "2.0.0-next.3",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@styled-icons/feather": "^10.34.0",
     "cookies-next": "^2.0.4",
     "dayjs": "^1.11.1",
     "framer-motion": "^6.3.3",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
-    "@chakra-ui/storybook-addon": "^1.0.3",
+    "@chakra-ui/storybook-addon": "^2.0.0-next.3",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
-    "@storybook/addon-a11y": "^6.4.22",
-    "@storybook/addon-actions": "^6.4.22",
-    "@storybook/addon-essentials": "^6.4.22",
-    "@storybook/addon-interactions": "^6.4.22",
-    "@storybook/addon-links": "^6.4.22",
+    "@emotion/babel-plugin": "^11.9.2",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@storybook/addon-a11y": "^6.5.0-beta.5",
+    "@storybook/addon-essentials": "^6.5.0-beta.5",
+    "@storybook/addon-interactions": "^6.5.0-beta.5",
+    "@storybook/addon-links": "^6.5.0-beta.5",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/builder-webpack5": "^6.4.22",
-    "@storybook/manager-webpack5": "^6.4.22",
-    "@storybook/react": "^6.4.22",
+    "@storybook/builder-webpack5": "^6.5.0-beta.5",
+    "@storybook/manager-webpack5": "^6.5.0-beta.5",
+    "@storybook/react": "^6.5.0-beta.5",
     "@storybook/testing-library": "^0.0.11",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.5",
@@ -87,7 +89,7 @@
     "prettier": "2.6.2",
     "sass": "^1.50.1",
     "storybook-css-modules-preset": "^1.1.1",
-    "storybook-dark-mode": "^1.0.9",
+    "storybook-dark-mode": "^1.1.1-canary.120.3843.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
     "webpack": "^5.72.0"
