--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": ".",
-    "paths": {
+    "baseUrl": "."
+    /*     "paths": {
       "@": ["src/"]
-    }
+    } */
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": [
