--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.30.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
