Chakra + React Hook Form + Cleanup Refactoring (#31)
* TailwindCSS config (#21)

* feat: tailwindcss added

* Mantine + Storybook (#22)

* style: mantine + storybook config with theme support

* Update main.yml (#23)

* build: fixes (#24)

* fix: settings

* fix: merge problems (#25)

* build: merge fix
* fix: settings

* docs: updated README (#26)

Added live badges and some format fixes to README.md..

* fix: merge fix (#27)

fix: readme changes not added to pr

* Mantine to Chakra (#28)

* build(icons): :lipstick: use emotion-icons/feather
* feat: ingredients style improvement
* feat: :lipstick: move from mantine to chakra ui
* build: remove no-ssr component
* build: theme.ts move

* Storybook 6.5 + styled-icons (from emotion-icons) - chakra 2.0  (#29)

* feat: chakra 2.0 - styled-icons - storybook 6.5

changed from emotion-icons to styled-icons as it was conflicting with storybook...

* Refactoring (#30)

* refactor: :art: better component hierarchy and hook-form soc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,42 @@
 {
+  //"parser": "@typescript-eslint/parser",
+  //"plugins": ["@typescript-eslint"],
   "extends": [
+    "eslint:recommended",
+    //"plugin:@typescript-eslint/eslint-recommended",
+    //"plugin:@typescript-eslint/recommended",
     "plugin:storybook/recommended",
     "next",
     "next/core-web-vitals",
     "prettier"
   ],
+  "env": {
+    "browser": true,
+    "es6": true
+  },
   "rules": {
+    "react/display-name": "off",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
-    "no-unused-vars": [1, { "args": "after-used", "argsIgnorePattern": "^_" }]
+    // "react/jsx-first-prop-new-line": [2, "multiline"],
+    // "react/jsx-max-props-per-line": [
+    //   2,
+    //   { "maximum": { "single": 1, "multi": 1 } }
+    // ],
+    "react/jsx-wrap-multilines": [
+      "error",
+      {
+        "declaration": "parens-new-line",
+        "assignment": "parens-new-line",
+        "return": "parens-new-line",
+        "arrow": "parens-new-line",
+        "condition": "parens-new-line",
+        "logical": "parens-new-line",
+        "prop": "parens-new-line"
+      }
+    ],
+    "no-unused-vars": [1, { "args": "after-used", "argsIgnorePattern": "^_" }],
+    "max-len": ["warn", { "code": 140, "ignoreComments": true }]
   },
   "overrides": [
     {
