--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,9 +8,14 @@
     "alduncanson.react-hooks-snippets",
     "dbankier.vscode-quick-select",
     "willstakayama.vscode-nextjs-snippets",
-    "nucllear.vscode-extension-auto-import",
     "drywolf.dark-plus-plus-theme",
-    "NuclleaR.vscode-extension-auto-import"
+    "vunguyentuan.vscode-postcss",
+    "clinyong.vscode-css-modules",
+    "stylelint.vscode-stylelint",
+    "vivaxy.vscode-conventional-commits",
+    "bradgashler.htmltagwrap",
+    "yatki.vscode-surround",
+    "naumovs.color-highlight"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
