--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "Showcase",
     "Example"
   ],
+  "browserslist": [
+    ">0.3%",
+    "not ie 11",
+    "not dead",
+    "not op_mini all"
+  ],
   "engines": {
     "node": ">=14.19.0",
     "npm": ">=6.14.16",
@@ -37,46 +43,57 @@
     "lint": "next lint",
     "prettier": "prettier --check .",
     "format": "prettier --write .",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "start-storybook -p 6006 -s ./public",
+    "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
-    "@mantine/core": "^4.1.4",
-    "@mantine/dates": "^4.1.4",
-    "@mantine/dropzone": "^4.1.4",
-    "@mantine/form": "^4.1.4",
-    "@mantine/hooks": "^4.1.4",
-    "@mantine/modals": "^4.1.4",
-    "@mantine/next": "^4.1.4",
-    "@mantine/notifications": "^4.1.4",
-    "@mantine/prism": "^4.1.4",
-    "@mantine/rte": "^4.1.4",
-    "@mantine/spotlight": "^4.1.4",
+    "@chakra-ui/icons": "2.0.0-next.1",
+    "@chakra-ui/react": "2.0.0-next.3",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@styled-icons/feather": "^10.34.0",
+    "cookies-next": "^2.0.4",
     "dayjs": "^1.11.1",
+    "framer-motion": "^6.3.3",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-hook-form": "^7.30.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
+    "@chakra-ui/storybook-addon": "^2.0.0-next.3",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
-    "@storybook/addon-actions": "^6.4.22",
-    "@storybook/addon-essentials": "^6.4.22",
-    "@storybook/addon-interactions": "^6.4.22",
-    "@storybook/addon-links": "^6.4.22",
-    "@storybook/builder-webpack5": "^6.4.22",
-    "@storybook/manager-webpack5": "^6.4.22",
-    "@storybook/react": "^6.4.22",
+    "@emotion/babel-plugin": "^11.9.2",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@storybook/addon-a11y": "^6.5.0-beta.5",
+    "@storybook/addon-essentials": "^6.5.0-beta.5",
+    "@storybook/addon-interactions": "^6.5.0-beta.5",
+    "@storybook/addon-links": "^6.5.0-beta.5",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-webpack5": "^6.5.0-beta.5",
+    "@storybook/manager-webpack5": "^6.5.0-beta.5",
+    "@storybook/react": "^6.5.0-beta.5",
     "@storybook/testing-library": "^0.0.11",
+    "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
+    "dd": "^0.19.7",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-storybook": "^0.5.11",
     "husky": "^7.0.4",
-    "prettier": "2.6.2"
+    "postcss": "^8.4.12",
+    "prettier": "2.6.2",
+    "sass": "^1.50.1",
+    "storybook-css-modules-preset": "^1.1.1",
+    "storybook-dark-mode": "^1.1.1-canary.120.3843.0",
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.0"
   },
   "resolutions": {
     "webpack": "^5"
