--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "cookies-next": "^2.0.4",
     "dayjs": "^1.11.1",
     "framer-motion": "^6.3.3",
+    "mongoose": "^6.3.4",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
