dev: commitlint config change

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -12,10 +12,11 @@
     "vunguyentuan.vscode-postcss",
     "clinyong.vscode-css-modules",
     "stylelint.vscode-stylelint",
-    "vivaxy.vscode-conventional-commits",
     "bradgashler.htmltagwrap",
     "yatki.vscode-surround",
-    "naumovs.color-highlight"
+    "naumovs.color-highlight",
+    "joshbolduc.commitlint",
+    "vivaxy.vscode-conventional-commits"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
