refactor: component separation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,7 @@
         "prop": "parens-new-line"
       }
     ],
-    "no-unused-vars": "off",
+    "no-unused-vars": 1,
     "max-len": ["warn", { "code": 140, "ignoreComments": true }],
     "import/no-anonymous-default-export": [2, { "allowArrowFunction": true }]
   },
