--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,16 @@
     ],
     "no-unused-vars": 1,
     "max-len": ["warn", { "code": 140, "ignoreComments": true }],
-    "import/no-anonymous-default-export": [2, { "allowArrowFunction": true }]
+    "import/no-anonymous-default-export": [2, { "allowArrowFunction": true }],
+    "object-curly-newline": [
+      "error",
+      {
+        "ObjectExpression": { "consistent": true, "multiline": true },
+        "ObjectPattern": { "consistent": true, "multiline": true },
+        "ImportDeclaration": "never",
+        "ExportDeclaration": { "multiline": true, "minProperties": 3 }
+      }
+    ]
   },
   "overrides": [
     {
