--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -15,8 +15,7 @@
     "bradgashler.htmltagwrap",
     "yatki.vscode-surround",
     "naumovs.color-highlight",
-    "joshbolduc.commitlint",
-    "vivaxy.vscode-conventional-commits"
+    "joshbolduc.commitlint"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
