--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cookies-next": "^2.0.4",
     "dayjs": "^1.11.1",
     "framer-motion": "^6.3.3",
+    "immer": "^9.0.15",
     "mongoose": "^6.3.4",
     "next": "12.1.5",
     "react": "18.0.0",
