feat(ui): ingredients list group add, edit, delete finished

--- a/.env.local.example
+++ b/.env.local.example
@@ -4,3 +4,5 @@ MONGODB_PASS=
 MONGODB_CLUSTER=
 MONGODB_DBNAME=
 MONGODB_URI=mongodb+srv://${MONGODB_USER}:${MONGODB_PASS}@${MONGODB_CLUSTER}.jswdp.mongodb.net/${MONGODB_DBNAME}?retryWrites=true&w=majority
+MONGODB_URI_PLAIN=mongodb+srv://${MONGODB_USER}:${MONGODB_PASS}@${MONGODB_CLUSTER}.jswdp.mongodb.net/${MONGODB_DBNAME}?retryWrites=true&w=majority
+SHOW_DEBUG_DATA=true
