--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@chakra-ui/react": "2.0.0-next.3",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/error-message": "^2.0.0",
     "@styled-icons/feather": "^10.34.0",
     "@styled-icons/octicons": "^10.44.0",
     "@types/uuid": "^8.3.4",
