--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.30.0",
+    "react-query": "^3.39.1",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2"
   },
