--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
   "dependencies": {
     "@chakra-ui/icons": "2.0.0-next.1",
     "@chakra-ui/react": "2.0.0-next.3",
+    "@dnd-kit/core": "^6.0.5",
+    "@dnd-kit/modifiers": "^6.0.0",
+    "@dnd-kit/sortable": "^7.0.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@hookform/error-message": "^2.0.0",
@@ -57,6 +60,7 @@
     "@types/uuid": "^8.3.4",
     "cookies-next": "^2.0.4",
     "dayjs": "^1.11.1",
+    "focus-visible": "^5.2.0",
     "framer-motion": "^6.3.3",
     "immer": "^9.0.15",
     "mongoose": "^6.3.4",
