--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -16,7 +16,7 @@
     "yatki.vscode-surround",
     "naumovs.color-highlight",
     "joshbolduc.commitlint",
-    "vivaxy.vscode-conventional-commits"
+    "GitHub.vscode-pull-request-github"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
