--- a/package.json
+++ b/package.json
@@ -88,11 +88,13 @@
     "@storybook/manager-webpack5": "^6.5.0-beta.5",
     "@storybook/react": "^6.5.0-beta.5",
     "@storybook/testing-library": "^0.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
     "dd": "^0.19.7",
-    "eslint": "8.13.0",
+    "eslint": "^8.13.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-storybook": "^0.5.11",
@@ -103,7 +105,7 @@
     "storybook-css-modules-preset": "^1.1.1",
     "storybook-dark-mode": "^1.1.1-canary.120.3843.0",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.3",
+    "typescript": "^4.7.4",
     "webpack": "^5.72.0"
   },
   "resolutions": {
