--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -15,8 +15,8 @@
     "bradgashler.htmltagwrap",
     "yatki.vscode-surround",
     "naumovs.color-highlight",
-    "joshbolduc.commitlint",
-    "GitHub.vscode-pull-request-github"
+    "github.vscode-pull-request-github",
+    "formulahendry.auto-rename-tag"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
