--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "editor.tabSize": 2,
+  "git.experimental.mergeEditor": true,
   "editor.codeActionsOnSave": {
     "source.organizeImports": false,
     "source.sortImports": true
