--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,8 @@
   "env": {
     "node": true,
     "browser": true,
-    "es6": true
+    "es6": true,
+    "jest": true
   },
   "rules": {
     "no-unused-vars": "off",
