--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "not op_mini all"
   ],
   "engines": {
-    "node": ">=14.19.0",
+    "node": ">=14",
     "npm": ">=6.14.16",
     "yarn": "please-use-npm"
   },
@@ -44,7 +44,8 @@
     "prettier": "prettier --check .",
     "format": "prettier --write .",
     "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@chakra-ui/icons": "2.0.0-next.1",
@@ -88,6 +89,8 @@
     "@storybook/manager-webpack5": "^6.5.0-beta.5",
     "@storybook/react": "^6.5.0-beta.5",
     "@storybook/testing-library": "^0.0.11",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "autoprefixer": "^10.4.4",
@@ -99,6 +102,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-storybook": "^0.5.11",
     "husky": "^7.0.4",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
     "sass": "^1.50.1",
