--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
@@ -100,6 +100,7 @@
     "eslint": "^8.13.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-chakra-ui": "^0.6.4",
     "eslint-plugin-storybook": "^0.5.11",
     "husky": "^7.0.4",
     "jest": "^28.1.1",
