--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "test": "jest --watch"
   },
   "dependencies": {
-    "@chakra-ui/icons": "2.0.0-next.1",
-    "@chakra-ui/react": "2.0.0-next.3",
+    "@chakra-ui/icons": "^2.0.2",
+    "@chakra-ui/react": "^2.2.1",
     "@dnd-kit/core": "^6.0.5",
     "@dnd-kit/modifiers": "^6.0.0",
     "@dnd-kit/sortable": "^7.0.1",
@@ -62,7 +62,6 @@
     "cookies-next": "^2.0.4",
     "dayjs": "^1.11.1",
     "deep-equal": "^2.0.5",
-    "focus-visible": "^5.2.0",
     "framer-motion": "^6.3.3",
     "immer": "^9.0.15",
     "mongoose": "^6.3.4",
@@ -77,7 +76,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
-    "@chakra-ui/storybook-addon": "^2.0.0-next.3",
+    "@chakra-ui/storybook-addon": "^4.0.1",
     "@emotion/babel-plugin": "^11.9.2",
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@storybook/addon-a11y": "^6.5.0-beta.5",
