--- a/.eslintrc
+++ b/.eslintrc
@@ -29,19 +29,19 @@
     //   2,
     //   { "maximum": { "single": 1, "multi": 1 } }
     // ],
-    "react/jsx-wrap-multilines": [
-      "error",
-      {
-        "declaration": "parens-new-line",
-        "assignment": "parens-new-line",
-        "return": "parens-new-line",
-        "arrow": "parens-new-line",
-        "condition": "parens-new-line",
-        "logical": "parens-new-line",
-        "prop": "parens-new-line"
-      }
-    ],
-    "max-len": ["warn", { "code": 140, "ignoreComments": true }],
+    // "react/jsx-wrap-multilines": [
+    //   "error",
+    //   {
+    //     "declaration": "parens-new-line",
+    //     "assignment": "parens-new-line",
+    //     "return": "parens-new-line",
+    //     "arrow": "parens-new-line",
+    //     "condition": "parens-new-line",
+    //     "logical": "parens-new-line",
+    //     "prop": "parens-new-line"
+    //   }
+    // ],
+    // "max-len": ["warn", { "code": 140, "ignoreComments": true }],
     "import/no-anonymous-default-export": [2, { "allowArrowFunction": true }]
   },
   "overrides": [
