--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": "."
-    /*     "paths": {
-      "@": ["src/"]
-    } */
+    "baseUrl": ".",
+    "paths": {
+      "&*": ["src/.*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": [
