- auth: supabase auth integration initial glue

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,3 @@
-
 MONGODB_USER=
 MONGODB_PASS=
 MONGODB_CLUSTER=
@@ -6,3 +5,5 @@ MONGODB_DBNAME=
 MONGODB_URI=mongodb+srv://${MONGODB_USER}:${MONGODB_PASS}@${MONGODB_CLUSTER}.jswdp.mongodb.net/${MONGODB_DBNAME}?retryWrites=true&w=majority
 MONGODB_URI_PLAIN=mongodb+srv://${MONGODB_USER}:${MONGODB_PASS}@${MONGODB_CLUSTER}.jswdp.mongodb.net/${MONGODB_DBNAME}?retryWrites=true&w=majority
 SHOW_DEBUG_DATA=true
+NEXT_PUBLIC_SUPABASE_URL=YOUR_SUPABASE_URL
+NEXT_PUBLIC_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
