--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@styled-icons/entypo": "^10.34.0",
     "@styled-icons/feather": "^10.34.0",
     "@styled-icons/octicons": "^10.44.0",
+    "@supabase/supabase-js": "^1.35.4",
     "@svgr/webpack": "^6.2.1",
     "@types/uuid": "^8.3.4",
     "cookies-next": "^2.0.4",
@@ -67,8 +68,9 @@
     "deep-equal": "^2.0.5",
     "framer-motion": "^6.3.3",
     "immer": "^9.0.15",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
-    "next": "12.1.5",
+    "next": "12.2.0",
     "nextjs-progressbar": "^0.0.14",
     "probe-image-size": "^7.2.3",
     "react": "18.0.0",
