--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@styled-icons/entypo": "^10.34.0",
     "@styled-icons/feather": "^10.34.0",
     "@styled-icons/octicons": "^10.44.0",
+    "@supabase/auth-helpers-nextjs": "^0.2.2",
     "@supabase/supabase-js": "^1.35.4",
     "@supabase/ui": "^0.36.5",
     "@svgr/webpack": "^6.2.1",
