--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "immer": "^9.0.15",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
-    "next": "12.2.0",
+    "next": "^12.2.2",
+    "next-auth": "^4.9.0",
     "nextjs-progressbar": "^0.0.14",
     "probe-image-size": "^7.2.3",
     "react": "18.0.0",
