Prisma configured, initial schema defined and migrated

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -16,7 +16,8 @@
     "yatki.vscode-surround",
     "naumovs.color-highlight",
     "github.vscode-pull-request-github",
-    "mattpocock.ts-error-translator"
+    "mattpocock.ts-error-translator",
+    "Prisma.prisma"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
