--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@hookform/error-message": "^2.0.0",
+    "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.0",
     "@styled-icons/boxicons-logos": "^10.38.0",
     "@styled-icons/entypo": "^10.34.0",
@@ -77,6 +78,7 @@
     "next": "^12.2.2",
     "next-auth": "^4.9.0",
     "nextjs-progressbar": "^0.0.14",
+    "nodemailer": "^6.7.7",
     "probe-image-size": "^7.2.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
