--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
+    "dev": "next dev",
+    "dev-inspect": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -76,7 +77,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "next": "^12.2.2",
-    "next-auth": "^4.9.0",
+    "next-auth": "^4.10.2",
     "nextjs-progressbar": "^0.0.14",
     "nodemailer": "^6.7.7",
     "probe-image-size": "^7.2.3",
