--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "@supabase/supabase-js": "^1.35.4",
     "@supabase/ui": "^0.36.5",
     "@svgr/webpack": "^6.2.1",
+    "@tanstack/react-query": "^4.0.10",
+    "@tanstack/react-query-devtools": "^4.0.10",
     "@types/uuid": "^8.3.4",
     "cookies-next": "^2.0.4",
     "dayjs": "^1.11.1",
@@ -84,7 +86,6 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.30.0",
-    "react-query": "^3.39.1",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2"
   },
