--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "secret-cook-book",
-  "description": "Recipe building and sharing. Full-stack application showcase.",
-  "version": "0.3.0",
+  "description": "Sample recipe builder full-stack app demo with Next.js and Supabase.",
+  "version": "0.4.0",
   "homepage": "https://github.com/cagils/secret-cook-book",
   "private": true,
   "license": "CC-BY-NC-SA-4.0",
@@ -18,11 +18,11 @@
     "url": "https://github.com/cagils/secret-cook-book/issues"
   },
   "keywords": [
+    "Example",
     "Full-stack",
-    "Next",
+    "Next.js",
     "React",
-    "Showcase",
-    "Example"
+    "Supabase"
   ],
   "browserslist": [
     ">0.3%",
@@ -30,11 +30,6 @@
     "not dead",
     "not op_mini all"
   ],
-  "engines": {
-    "node": ">=14",
-    "npm": ">=6.14.16",
-    "yarn": "please-use-npm"
-  },
   "scripts": {
     "prepare": "husky install",
     "dev": "next dev",
@@ -62,13 +57,10 @@
     "@styled-icons/entypo": "^10.34.0",
     "@styled-icons/feather": "^10.34.0",
     "@styled-icons/octicons": "^10.44.0",
-    "@supabase/auth-helpers-nextjs": "^0.2.2",
     "@supabase/supabase-js": "^1.35.4",
-    "@supabase/ui": "^0.36.5",
     "@svgr/webpack": "^6.2.1",
     "@tanstack/react-query": "^4.0.10",
     "@tanstack/react-query-devtools": "^4.0.10",
-    "@types/uuid": "^8.3.4",
     "cookies-next": "^2.0.4",
     "dayjs": "^1.11.1",
     "deep-equal": "^2.0.5",
@@ -76,6 +68,7 @@
     "immer": "^9.0.15",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
+    "nanoid": "^4.0.0",
     "next": "^12.2.2",
     "next-auth": "^4.10.2",
     "nextjs-progressbar": "^0.0.14",
@@ -83,9 +76,7 @@
     "probe-image-size": "^7.2.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-hook-form": "^7.30.0",
-    "styled-components": "^5.3.5",
-    "uuid": "^8.3.2"
+    "react-hook-form": "^7.30.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
@@ -98,7 +89,6 @@
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
-    "dd": "^0.19.7",
     "eslint": "^8.13.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
