refactor: removed unused imports

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -13,11 +13,10 @@
     "clinyong.vscode-css-modules",
     "stylelint.vscode-stylelint",
     "bradgashler.htmltagwrap",
-    "yatki.vscode-surround",
     "naumovs.color-highlight",
     "github.vscode-pull-request-github",
     "mattpocock.ts-error-translator",
-    "Prisma.prisma"
+    "prisma.prisma"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
