refactor: converted imports to aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,10 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "&*": ["src/.*"]
+      "@/*": ["src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
   "exclude": [
     "node_modules",
     "**/node_modules/*",
