fix: recipes page - refetch on window focus due to next-auth session update

--- a/.env.local.example
+++ b/.env.local.example
@@ -3,7 +3,14 @@ MONGODB_PASS=
 MONGODB_CLUSTER=
 MONGODB_DBNAME=
 MONGODB_URI=mongodb+srv://${MONGODB_USER}:${MONGODB_PASS}@${MONGODB_CLUSTER}.jswdp.mongodb.net/${MONGODB_DBNAME}?retryWrites=true&w=majority
-MONGODB_URI_PLAIN=mongodb+srv://${MONGODB_USER}:${MONGODB_PASS}@${MONGODB_CLUSTER}.jswdp.mongodb.net/${MONGODB_DBNAME}?retryWrites=true&w=majority
-SHOW_DEBUG_DATA=true
-NEXT_PUBLIC_SUPABASE_URL=YOUR_SUPABASE_URL
-NEXT_PUBLIC_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
+MONGODB_URI_PLAIN=mongodb+srv://
+NEXT_PUBLIC_SHOW_DEBUG_DATA=true
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=
+GITHUB_ID=
+GITHUB_SECRET=
+GOOGLE_ID=
+GOOGLE_SECRET=
+DATABASE_URL=postgres://
