--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,15 +23,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
-  "exclude": [
-    "node_modules",
-    "**/node_modules/*",
-    "build",
-    "dist",
-    ".vscode",
-    ".next",
-    "coverage",
-    ".npm",
-    ".yarn"
-  ]
+  "exclude": ["node_modules", "**/node_modules/*", "build", "dist", ".vscode", ".next", "coverage", ".npm", ".yarn"]
 }
