env local example updated

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,16 +1,28 @@
-MONGODB_USER=
+
+MONGODB_USER=scb
 MONGODB_PASS=
-MONGODB_CLUSTER=
-MONGODB_DBNAME=
+MONGODB_CLUSTER=scbcluster
+MONGODB_DBNAME=SCB
 MONGODB_URI=mongodb+srv://${MONGODB_USER}:${MONGODB_PASS}@${MONGODB_CLUSTER}.jswdp.mongodb.net/${MONGODB_DBNAME}?retryWrites=true&w=majority
 MONGODB_URI_PLAIN=mongodb+srv://
 NEXT_PUBLIC_SHOW_DEBUG_DATA=true
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
-NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=
 GITHUB_ID=
+GITHUB_ID_PRO=
+GITHUB_ID_DEV=
 GITHUB_SECRET=
+GITHUB_SECRET_PRO=
+GITHUB_SECRET_DEV=
 GOOGLE_ID=
+GOOGLE_ID_PRO=
+GOOGLE_ID_DEV=
 GOOGLE_SECRET=
-DATABASE_URL=postgres://
+GOOGLE_SECRET_PRO=
+GOOGLE_SECRET_DEV=
+DATABASE_URL=postgresql://postgres:XXXXXXXX!@db.XXXXXXXXX.supabase.co:5432/postgres
+EMAIL_SERVER_HOST=smtp.mailtrap.io
+EMAIL_SERVER_PORT=2525
+EMAIL_SERVER_USER=
+EMAIL_SERVER_PASSWORD=
